--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 	<head>
 		<meta charset="utf8">
 		<title>EGShop</title>
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
-		<p>привет</p>
+		<div class="wrapper">
+			<div class="lot">
+				<span class="header">тест</span>
+				<div class="desc">описание</div>
+				<img src="img/1.png" alt="">
+				<span class="price">1000</span>
+				<a class = "buy" href="#">Купить</a>
+			</div>
+		</div>
 	</body>
 </html>
