--- a/index.html
+++ b/index.html
@@ -1,10 +1,74 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf8">
-		<title>EGShop</title>
-	</head>
+<head>
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/slider.css">
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
+	<script type="text/javascript" src="slick/slick.min.js"></script>
+	<script src="js/slider.js"></script>
+	<title>EGShop</title>
+</head>
 	<body>
-		<p>покеда</p>
-	</body>
+		<div class="wrapper">
+							<div class="slider">
+								<div>
+										<div class="sliderimg">
+											<img src="img/russianflag.jpg" alt="жжжъъж">
+										</div>
+										<div class="slidertext">
+												<div class="slidername">
+															Lorem ipsum.
+												</div>
+												<div class="sliderdesc">
+														Хлопок, шелкография 100см на 60см
+												</div>
+										</div>
+
+								</div>
+
+
+								<div>
+
+								</div>
+
+
+								<div>
+
+								</div>
+<!--
+							<div>
+										<div class="sliderimg">
+										</div>
+										<div class="sliderdesc">
+											Хлопок, шелкография 100см на 60см
+										</div>
+								</div>
+								<div>
+										<div class="sliderimg">
+
+										</div>
+										<div class="sliderdesc">
+											Хлопок, шелкография 100см на 60см
+										</div>
+								</div>
+								<div>
+										<div class="sliderimg">
+										</div>
+										<div class="sliderdesc">
+											Хлопок, шелкография 100см на 60см</div>
+										</div>
+									-->
+							</div>
+			<div class="lot">
+				<span class="header">тест</span>
+				<div class="desc">описание</div>
+			<!--	<img src="img/1.png" alt=""> -->
+				<span class="price">1000</span>
+				<a class = "buy" href="#">Купить</a>
+			</div>
+		</div>
+</body>
 </html>
