--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<body>
 		<div class="wrapper">
 							<div class="slider">
+								<!-- первый слайд -->
 								<div>
 										<div class="sliderimg">
 											<img src="img/russianflag.jpg" alt="жжжъъж">
@@ -26,17 +27,34 @@
 														Хлопок, шелкография 100см на 60см
 												</div>
 										</div>
-
 								</div>
-
-
+								<!-- второй слайд-->
 								<div>
-
+										<div class="sliderimg">
+											<img src="img/russianflag.jpg" alt="жжжъъж">
+										</div>
+										<div class="slidertext">
+												<div class="slidername">
+															Lorem ipsum.
+												</div>
+												<div class="sliderdesc">
+														Хлопок, шелкография 100см на 60см
+												</div>
+										</div>
 								</div>
-
-
+								<!-- третий слайд-->
 								<div>
-
+										<div class="sliderimg">
+											<img src="img/russianflag.jpg" alt="жжжъъж">
+										</div>
+										<div class="slidertext">
+												<div class="slidername">
+															Lorem ipsum.
+												</div>
+												<div class="sliderdesc">
+														Хлопок, шелкография 100см на 60см
+												</div>
+										</div>
 								</div>
 <!--
 							<div>
