get info from digiseller

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
 	<script src="js/slider.js"></script>
+	<script src="js/getinfo.js"></script>
 	<title>EGShop</title>
 </head>
 	<body>
@@ -20,11 +21,9 @@
 											<img src="img/russianflag.jpg" alt="жжжъъж">
 										</div>
 										<div class="slidertext">
-												<div class="slidername">
-															Lorem ipsum.
+												<div class="slidername slidername1">
 												</div>
-												<div class="sliderdesc">
-														Хлопок, шелкография 100см на 60см
+												<div class="sliderdesc sliderdesc1">
 												</div>
 										</div>
 								</div>
@@ -34,11 +33,9 @@
 											<img src="img/russianflag.jpg" alt="жжжъъж">
 										</div>
 										<div class="slidertext">
-												<div class="slidername">
-															Lorem ipsum.
+												<div class="slidername slidername2">
 												</div>
-												<div class="sliderdesc">
-														Хлопок, шелкография 100см на 60см
+												<div class="sliderdesc sliderdesc2">
 												</div>
 										</div>
 								</div>
@@ -48,11 +45,9 @@
 											<img src="img/russianflag.jpg" alt="жжжъъж">
 										</div>
 										<div class="slidertext">
-												<div class="slidername">
-															Lorem ipsum.
+												<div class="slidername slidername3">
 												</div>
-												<div class="sliderdesc">
-														Хлопок, шелкография 100см на 60см
+												<div class="sliderdesc sliderdesc3">
 												</div>
 										</div>
 								</div>
@@ -63,7 +58,7 @@
 										<div class="sliderdesc">
 											Хлопок, шелкография 100см на 60см
 										</div>
-								</div>
+								</div₽
 								<div>
 										<div class="sliderimg">
 
@@ -81,12 +76,29 @@
 									-->
 							</div>
 			<div class="lot">
-				<span class="header">тест</span>
-				<div class="desc">описание</div>
-			<!--	<img src="img/1.png" alt=""> -->
-				<span class="price">1000</span>
 				<a class = "buy" href="#">Купить</a>
+				<span class="header slidername1"></span><br>
+				<div class="desc sliderdesc1"></div><br>
+			<!--	<img src="img/1.png" alt=""> -->
+				<span class="price sliderprice1"></span>₽
 			</div>
+
+			<div class="lot">
+				<a class = "buy" href="#">Купить</a>
+				<span class="header slidername2"></span><br>
+				<div class="desc sliderdesc2"></div><br>
+			<!--	<img src="img/1.png" alt=""> -->
+				<span class="price sliderprice2"></span>₽
+			</div>
+
+			<div class="lot">
+				<a class = "buy" href="#">Купить</a>
+				<span class="header slidername3"></span><br>
+				<div class="desc sliderdesc3"></div><br>
+			<!--	<img src="img/1.png" alt=""> -->
+				<span class="price sliderprice3"></span>₽
+			</div>
+
 		</div>
 </body>
 </html>
