--- a/head.html
+++ b/head.html
@@ -7,5 +7,6 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="crossorigin="anonymous"></script>
 	<script type="text/javascript" src="slick/slick.min.js"></script>
 	<script src="js/slider.js"></script>
+	<script src="js/getinfo.js"></script>
 	<title>EGShop</title>
 </head>
